# capn-rs

./: .coderabbit.yaml  .gitignore  CLAUDE.md  COMPREHENSIVE_TEST_PLAN.md  COVERAGE_IMPLEMENTATION_SUMMARY.md  COVERAGE_REPORT.md  Cargo.toml  Dockerfile  Makefile  PERFORMANCE_IMPROVEMENTS.md  README.md  RELEASING.md  REMAINING_WORK.md  RUST_CODING_STANDARDS.md  TIERED_TESTING.md  TYPESCRIPT_INTEROP.md  TYPESCRIPT_INTEROP_VALIDATION_PLAN.md  UNIMPLEMENTED-FEATURES.md  deny.toml  fix-performance.sh  run-tests.sh  run_validation.sh  spec.md  tarpaulin.toml  test-protocol.sh  test-wire.sh  test_interop.rs  test_wire_direct.sh  test_wire_protocol.rs  validate-typescript-compatibility.sh
.github/workflows/: ci.yml  docs.yml  interop.yml  release.yml
benches/: protocol_benchmarks.rs
capnweb-client/: Cargo.toml  README.md
capnweb-client/examples/: basic_client.rs  batch_pipelining.rs  batch_pipelining_client.rs  calculator_client.rs  comprehensive_validation_client.rs  error_handling.rs
capnweb-client/src/: client.rs  lib.rs  macros.rs  recorder.rs  stubs.rs
capnweb-core/: Cargo.toml  README.md
capnweb-core/src/: codec.rs  error.rs  ids.rs  il.rs  il_executor.rs  il_extended.rs  lib.rs  msg.rs  promise.rs  promise_map.rs  validate.rs
capnweb-core/src/protocol/: capability_registry.rs  evaluator.rs  expression.rs  ids.rs  il_runner.rs  message.rs  mod.rs  nested_capabilities.rs  parser.rs  pipeline.rs  remap_engine.rs  resume_tokens.rs  session.rs  tables.rs  tests.rs  variable_state.rs  wire.rs
capnweb-core/tests/: advanced_features_integration.rs  capability_lifecycle_tests.rs  coverage_improvement_tests.rs  il_execution_tests.rs  il_runner_coverage_tests.rs  nested_capabilities_coverage_tests.rs  nested_capabilities_tests.rs  promise_pipelining_tests.rs  protocol_compliance_tests.rs  protocol_compliance_tests.rs.disabled  record_replay_tests.rs  resume_tokens_coverage_tests.rs
capnweb-interop-tests/: Cargo.toml
capnweb-interop-tests/src/: fixtures.rs  js_client_tests.rs  js_server_tests.rs  lib.rs  simple_interop.rs
capnweb-server/: Cargo.toml  README.md  complex_response.json
capnweb-server/examples/: advanced_capability_marshaling.rs  advanced_features_server.rs  advanced_stateful_server.rs  basic_server.rs  calculator_server.rs  debug_protocol_server.rs  protocol_compliant_server.rs  protocol_server.rs  protocol_showcase_server.rs  stateful_server.rs  typescript_examples_server.rs  typescript_interop_server.rs  typescript_interop_server_broken.rs  typescript_interop_server_old.rs  unified_test_server.rs  wire_protocol_server.rs
capnweb-server/src/: advanced_capability.rs  cap_table.rs  capnweb_server.rs  h3_server.rs  lib.rs  lifecycle.rs  limits.rs  logging.rs  promise_table.rs  runner.rs  server.rs  server_wire_handler.rs  wire_server.rs  ws_h1.rs  ws_wire.rs
capnweb-server/tests/: integration_test.rs
capnweb-transport/: Cargo.toml  README.md
capnweb-transport/src/: capnweb_codec.rs  http3.rs  http_batch.rs  lib.rs  negotiate.rs  transport.rs  websocket.rs  webtransport.rs
capnweb-transport/tests/: protocol_transport_tests.rs  protocol_transport_tests.rs.disabled  transport_coverage_tests.rs
docs/: CODERABBIT_SETUP.md  INTEGRATION_TEST_UPDATE_NEEDED.md
docs/assets/: doc-header.html  doc-styles.css
docs/guides/: CODING_QUICK_REFERENCE.md  ENGINEERING_TASK_LIST.md  TESTING-README.md  TESTING_GUIDE.md
docs/reports/: CAPNWEB_PROTOCOL_SUMMARY.md  CAP_N_WEB_PROTOCOL_MASTERY_REPORT.md  FINAL_VALIDATION_REPORT.md  OFFICIAL_CLIENT_TEST_RESULTS.md  PERFORMANCE_FIX_LOG.md  PROJECT_SUMMARY.md  PROTOCOL_IMPLEMENTATION_PLAN.md  PROTOCOL_IMPLEMENTATION_STATUS.md  PROTOCOL_INCOMPATIBILITY_ANALYSIS.md  PROTOCOL_VALIDATION_COMPREHENSIVE.md  TYPESCRIPT_COMPATIBILITY_ANALYSIS.md  TYPESCRIPT_EXAMPLES_VALIDATION.md  TYPESCRIPT_VALIDATION_REPORT.md
examples/: advanced_features_showcase.rs  basic_server.rs  calculator_client.rs  calculator_server.rs  capnweb_protocol_server.rs  webtransport_server.rs
logs/: capnweb-server.2025-09-23  capnweb-server.2025-09-24
scripts/: build-server.sh  bump-version.sh  coverage.sh  minimal_server.py  run-server.sh  run-tiered-tests.sh  test_server.sh
scripts/coverage/: analyze-coverage.py  full-coverage-analysis.sh  identify-uncovered-code.py  run-coverage.sh
tests/: validate_advanced_features.rs
typescript-interop/: .gitignore  README.md  package-lock.json  package.json  patch-capnweb-serialization.sh  patch-capnweb.sh  pnpm-lock.yaml  run-all-tests.sh  run-complete-tests.sh  setup-capnweb.sh  setup.sh  test-array-escaping.mjs  test-comprehensive.ts  test-debug.js  test-debug.ts  test-direct.ts  test-edge-cases.mjs  test-examples-compatibility.sh  test-format.js  test-rust-server-basic.ts  test-rust-server.ts  test-simple.js  tsconfig.json  tsup.config.ts  upstream-issue-report.md
typescript-interop/logs/: capnweb-server.2025-09-24
typescript-interop/src/: advanced-features-demo.ts  advanced-server-test.ts  complete-advanced-features-test.ts  comprehensive-stateful-test.ts  comprehensive-test-runner.ts  cross-transport-interop.ts  debug-batch-test.ts  debug-client.ts  fixed-official-client-test.ts  interop-tests.ts  official-client-test.ts  promise-pipelining-test.ts  test-newline-format.ts  test-runner.ts  tier1-protocol-compliance.ts  tier2-http-batch-corrected.ts  tier2-stateful-sessions.ts  tier2-websocket-tests.ts  tier3-capability-composition.ts  tier3-complex-applications.ts  tier3-extreme-stress.ts  tier3-websocket-advanced.ts
typescript-tests/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  run-interop-tests.sh  tsconfig.json  tsup.config.ts
typescript-tests/src/: index.ts  typescript-server.ts
typescript-tests/src/capnweb/: client.ts  server.ts  types.ts  websocket-transport.ts
typescript-tests/src/tests/: client-tests.ts  server-tests.ts  test-framework.ts
