[package]
name = "capnweb-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/capnweb-client"
description = "High-performance Rust client for Cap'n Web RPC protocol with batching and pipelining"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
capnweb-core.workspace = true
capnweb-transport.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Concurrent data structures
dashmap.workspace = true
indexmap.workspace = true

# Macro support
syn = { version = "2.0", optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

[dev-dependencies]
mockito.workspace = true
proptest.workspace = true
criterion.workspace = true
capnweb-server.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["all-transports", "macros"]
all-transports = ["capnweb-transport/default"]
macros = ["dep:syn", "dep:quote", "dep:proc-macro2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]