[package]
name = "currentspace-capnweb-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/currentspace-capnweb-core"
description = "Core protocol implementation for Cap'n Web RPC - capability-based security with promise pipelining"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
indexmap.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
uuid = { workspace = true, features = ["v4"] }
base64.workspace = true
sha2.workspace = true
rand.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Optional dependencies
jsonschema = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
simd-json = { version = "0.14", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }
proptest.workspace = true
insta.workspace = true
criterion.workspace = true
uuid = { workspace = true, features = ["v4"] }

[features]
default = ["validation"]
validation = ["dep:jsonschema", "dep:schemars"]
simd = ["dep:simd-json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

