[package]
name = "capnweb-interop-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interoperability tests for Cap'n Web implementations"

[dependencies]
capnweb-core.workspace = true
capnweb-transport.workspace = true
capnweb-server.workspace = true
capnweb-client.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Test utilities
insta.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[test]]
name = "js_client"
harness = false

[[test]]
name = "js_server"
harness = false

[[bench]]
name = "interop_bench"
harness = false