[package]
name = "currentspace-capnweb-interop-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interoperability tests for Cap'n Web implementations"

[dependencies]
currentspace-capnweb-core.workspace = true
currentspace-capnweb-transport.workspace = true
currentspace-capnweb-server.workspace = true
currentspace-capnweb-client.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Test utilities
insta.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tokio-test = "0.4"

