[package]
name = "capnweb-transport"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/capnweb-transport"
description = "Transport layer implementations for Cap'n Web protocol (HTTP, WebSocket, WebTransport)"
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
capnweb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true, features = ["codec"] }
futures.workspace = true
async-trait.workspace = true

# HTTP dependencies
hyper = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

# WebSocket dependencies
tokio-tungstenite = { workspace = true, optional = true }
tungstenite = { workspace = true, optional = true }

# HTTP/3 & WebTransport dependencies
quinn = { workspace = true, optional = true }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[dev-dependencies]
mockito.workspace = true
proptest.workspace = true
criterion.workspace = true

[features]
default = ["websocket", "http-batch"]
websocket = ["dep:tokio-tungstenite", "dep:tungstenite"]
webtransport = ["dep:quinn", "dep:h3", "dep:h3-quinn", "dep:rustls", "dep:rustls-pemfile"]
# http3 = ["dep:quinn", "dep:rustls", "dep:rustls-pemfile"]  # Disabled: experimental, needs update
http-batch = ["dep:hyper", "dep:tower"]